prop-house-webapp/src/components/StatusPill/StatusPill.module.css
.pillContainer {
  display: inline-block;
  margin: 1rem 0.75rem;
  padding: 5px 0.75rem;
  border-radius: 50px;
  position: relative;
  top: -5px;
  font-size: 14px;
  font-weight: 600;
}

.greyBg {
  background-color: var(--brand-gray-transparent);
  color: var(--brand-gray);
}
.greenBg {
  background-color: #50ba9a;
  color: white;
}
.yellowBg {
  background-color: #dbb738;
  color: white;
}
.pinkBg {
  color: var(--brand-pink);
  background-color: var(--brand-pink-transparent);
}

